Isabelle NEWS -- history of user-relevant changes
=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** HOL ***

* Theory "HOL.Fun":
  - Added lemmas.
      antimonotone_on_inf_fun
      antimonotone_on_sup_fun
      monotone_on_inf_fun
      monotone_on_sup_fun

* Theory "HOL.Relation":
  - Changed definition of predicate refl_on to not constrain the domain
    and range of the relation. To get the old semantics, explicitely use
    the formula "r \<subset> A \<times> A \<and> refl_on A r". INCOMPATIBILITY.
  - Removed predicate single_valuedp. Use predicate right_unique instead.
    INCOMPATIBILITY.
  - Removed lemmas. Minor INCOMPATIBILITY.
      antisym_empty[simp] (use antisym_on_bot instead)
      antisym_bot[simp] (use antisymp_on_bot instead)
      trans_empty[simp] (use trans_on_bot instead)
  - Strengthened lemmas. Minor INCOMPATIBILITY.
      refl_on_empty[simp]
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.
      antisymp_equality[simp] ~> antisymp_on_equality[simp]
      transp_equality[simp] ~> transp_on_equality[simp]
  - Added lemmas.
      antisym_on_bot[simp]
      antisymp_on_bot[simp]
      asym_on_bot[simp]
      asymp_on_bot[simp]
      irrefl_on_bot[simp]
      irreflp_on_bot[simp]
      left_unique_bot[simp]
      left_unique_iff_Uniq
      refl_on_top[simp]
      reflp_on_refl_on_eq[pred_set_conv]
      reflp_on_top[simp]
      sym_on_bot[simp]
      sym_on_top[simp]
      symp_on_bot[simp]
      symp_on_equality[simp]
      symp_on_top[simp]
      total_on_top[simp]
      totalp_on_mono[mono]
      totalp_on_mono_strong
      totalp_on_mono_stronger
      totalp_on_mono_stronger_alt
      totalp_on_top[simp]
      trans_on_bot[simp]
      trans_on_diff_Id
      trans_on_top[simp]
      transp_on_bot[simp]
      transp_on_top[simp]

* Theory "HOL.Wellfounded":