@@ -147,9 +147,8 @@ fun gen_guess prep_var raw_vars int state =
 
     val guess = (("guess", 0), propT);
     val goal = Var guess;
-    val pos = Position.thread_data ();
     fun print_result ctxt' (k, [(s, [_, th])]) =
-      Proof_Display.print_results {interactive = int, pos = pos, proof_state = true}
+      Proof_Display.print_results {interactive = int, pos = Position.thread_data ()}
         ctxt' (k, [(s, [th])]);
     val before_qed =
       Method.primitive_text (fn ctxt =>
